<resources>
    <string name="app_name">Ager</string>
    <string name="you_are_a">You are a</string>
    <string name="your_age">Your Age</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="ager">Ager</string>
    <string name="this_image_tells_your_age_group">This image tells your age group</string>
    <string name="check">Check</string>
    <string name="are_you_still_young">Are You Still Young</string>
    <string name="lets_find_out_with">Lets Find Out With</string>
</resources>